fix json config

--- a/config.json
+++ b/config.json
@@ -16,9 +16,7 @@
   "entrypoint": "python -m uvicorn src.main:app --host 0.0.0.0 --port 8000",
   "port": 8000,
   "context_menu": {
-    "target": [
-      "images_project"
-    ],
+    "target": ["images_project"],
     "context_category": "Transform"
-  },
+  }
 }
