--- a/config.json
+++ b/config.json
@@ -6,9 +6,7 @@
   "categories": [
     "idea",
     "images",
-    "data operations",
-    "data transformation",
-    "annotation transformation"
+    "labeling"
   ],
   "icon": "https://user-images.githubusercontent.com/12828725/207275995-2d394281-5b79-4ca6-a2af-876a221bf01b.png",
   "icon_cover": true,
